[tool.poetry]
name = "ts-8-pro-control"
version = "0.1.0"
description = "Control PoE status on a Ubiquiti TS-8-Pro Switch"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ts_8_pro_control" }]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
paramiko = "^2.12.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
flake8-docstrings = "^1.6.0"
pydocstyle = "^6.1.1"
pep8-naming = "^0.13.2"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
