[tool.poetry]
name = "poectrl"
version = "0.3.0"
description = "Control PoE status on select Ubiquiti switches"
license = "MIT"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
readme = "README.md"
repository = "https://github.com/seapagan/ts-8-pro-control"
homepage = "https://github.com/seapagan/ts-8-pro-control"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
"Pull Requests" = "https://github.com/seapagan/openapi-readme/pulls"
"Bug Tracker" = "https://github.com/seapagan/openapi-readme/issues"


[tool.poetry.scripts]
poectrl = "poectrl.main:app"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
paramiko = "^2.12.0"
typer = { extras = ["all"], version = "^0.7.0" }
fastapi = {extras = ["all"], version = "^0.88.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
flake8-docstrings = "^1.6.0"
pydocstyle = "^6.1.1"
pep8-naming = "^0.13.2"
pylint = "^2.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
